[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.2", features=["json"]}
juniper = {version = "0.15.11", features=["expose-test-schema"]}
juniper_rocket = "0.8.2"
derive-new = "0.5"


